      the root CMakeLists.txt
      [Reported by Daniel Elliott]
    - LeafNode::modifyValue() and LeafNode::modifyValueAndActiveState()
      now modify voxel values in place for improved performance.

    Bug fixes:
    - Fixed a bug in tools::computeScalarPotential() that could produce
      a corrupt result due to invalid memory access.
      [Reported by Edwin Braun]

    Python:
    - CMake now always produces a .so for the Python module on UNIX platforms.
    - Fixed a compile-time error when building the Python module for Python 3.
      [Reported by yurivict]

    Houdini:
    - Added openvdb_houdini::GEOvdbApply(), which invokes a functor
      on a VDB primitive if the resolved grid type is a member of
      a given type list.
    - Fixed a regression in the Fill SOP that caused it to modify VDBs
      in the input detail.
    - The Combine SOP no longer crashes in Copy B mode when the destination
      is not a VDB.


Version 6.1.0 - May 8, 2019

      As of this release, the oldest supported Houdini version is 16.5.

    New features:
    - Added new QuatTraits, MatTraits and ValueTraits type traits to complement
      VecTraits and added an IsSpecializationOf helper metafunction.
    - Added support for Vec4s, Vec4d and Vec4i metadata.
    - Added a generic TypeList class.
    - Added GridBase::apply(), which invokes a functor on a grid
      if the resolved grid type is a member of a given type list.
    - Added util::printTime(), which outputs nicely formatted time information.
    - Added a std::hash<Coord> template specialization.
    - Added CoordBBox::moveMin() and CoordBBox::moveMax() to move a CoordBBox.

    Improvements:
    - util::CpuTimer now makes use of util::printTime() for nicer output,
      and its API has been improved.
    - Significantly improved the performance of point data grid string
      attribute generation.
    - AttributeArray::copy() and the copy assignment operator for
      AttributeArrays are now thread-safe.