@@ -351,6 +351,26 @@ inline bool
 isFinite(const Type& x) { return std::isfinite(static_cast<double>(x)); }
 
 
+/// Return @c true if @a x is an infinity value (either positive infinity or negative infinity).
+inline bool
+isInfinite(const float x) { return std::isinf(x); }
+
+/// Return @c true if @a x is an infinity value (either positive infinity or negative infinity).
+template<typename Type, typename std::enable_if<std::is_arithmetic<Type>::value, int>::type = 0>
+inline bool
+isInfinite(const Type& x) { return std::isinf(static_cast<double>(x)); }
+
+
+/// Return @c true if @a x is a NaN (Not-A-Number) value.
+inline bool
+isNan(const float x) { return std::isnan(x); }
+
+/// Return @c true if @a x is a NaN (Not-A-Number) value.
+template<typename Type, typename std::enable_if<std::is_arithmetic<Type>::value, int>::type = 0>
+inline bool
+isNan(const Type& x) { return std::isnan(static_cast<double>(x)); }
+
+
 /// @brief Return @c true if @a a is equal to @a b to within
 /// the default floating-point comparison tolerance.
 template<typename Type>
