@@ -24,6 +24,15 @@ Bug fixes:
   @vdblink::tools::computeScalarPotential() computeScalarPotential@endlink
   that could produce a corrupt result due to invalid memory access.
   <I>[Reported&nbsp;by&nbsp;Edwin&nbsp;Braun]</I>
+- Fixed a bug in
+  @vdblink::math::Tuple::isInfinite() isInfinite@endlink isInfinite() and
+  @vdblink::math::Tuple::isNan() isNan@endlink isNan() methods of
+  @vdblink::math::Tuple math::Tuple@endlink and
+  @vdblink::math::Mat::isFinite() isFinite@endlink isFinite(),
+  @vdblink::math::Mat::isInfinite() isInfinite@endlink isInfinite() and
+  @vdblink::math::Mat::isNan() isNan@endlink isNan() methods of
+  @vdblink::math::Mat math::Mat@endlink when called using integer types that
+  led to compile-time errors on Windows.
 
 @par
 Python:
