@@ -15,6 +15,10 @@ Version 6.1.1 - In development
     - Fixed a bug in tools::computeScalarPotential() that could produce
       a corrupt result due to invalid memory access.
       [Reported by Edwin Braun]
+    - Fixed a bug in isInfinite() and isNan() methods of math::Tuple and
+      isFinite(), isInfinite() and isNan() methods of math::Mat when
+      called using integer types that led to compile-time errors on
+      Windows.
 
     Python:
     - CMake now always produces a .so for the Python module on UNIX platforms.
